Modificacao titulo e footer

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <div class="corpo">
-    <h4>Clique nas imagens para mais informações sobre cada peça do aparelho de insuflação-exsuflação mecânica.</h4>
+    <h4>Explore as cinco peças do aparelho de insuflação-exsuflação mecânica e saiba mais sobre as funções e os cuidados no uso desses componentes.</h4>
 
     <div class="imagem">
       <img src="assets/images/aparelho-1.png" alt="Dispositivo" id="dispositivo-img">
@@ -61,7 +61,7 @@
       <div class="arrow-up"></div>
       <div class="text">
         <h3>Filtro de ar</h3>
-        <h4>filtro é localizado na parte posterior do ventilador e 
+        <h4>O filtro é localizado na parte posterior do ventilador e 
           tem como objetivo filtrar o ar que está indo para o paciente para retirar possíveis impureza. 
           O filtro de ar é descartável e não deve ser lavado.</h4>
       </div>
