--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,69 +15,66 @@
       @@include('./partials/header.html')
   </header>
 
-  <div class="corpo">
-    <h4>Explore as cinco peças do aparelho de insuflação-exsuflação mecânica e saiba mais sobre as funções e os cuidados no uso desses componentes.</h4>
+  <div class="corpo" id="conteudo">
+    <p>Na imagem abaixo, temos uma ilustração colorida do aparelho de insuflação-exuflação mecânica,
+      composto por cinco peças. Explore-as, navegando cada uma delas, e saiba mais sobre as funções e os cuidados no uso desses componentes.</p>
 
     <div class="imagem">
-      <img src="assets/images/aparelho-1.png" alt="Dispositivo" id="dispositivo-img">
-      <img src="assets/images/aparelho-2.png" alt="Filtro" id="filtro-img">
-      <img src="assets/images/aparelho-3.png" alt="Tubos de circuito" id="tubo-img">
-      <img src="assets/images/aparelho-4.png" alt="Adaptador" id="adaptador-img">
-      <img src="assets/images/aparelho-5.png" alt="Máscara Facial" id="mascara-img">
-    </div>
+      <a id="dispositivo-img"><img src="assets/images/aparelho-1.png" alt="Dispositivo"></a>
+      <div class="dropdown" id="dispositivo-text">
+        <div class="arrow-up"></div>
+        <div class="text">
+          <h1>Dispositivo</h1>
+          <p>O dispositivo é a parte operante, nele se faz as alterações de pressão e tempo necessárias para dar ao paciente a melhor terapia. 
+            A sua limpeza deve ser feita somente na parte externa, assim não se deve em hipótese alguma abrir o equipamento para limpar por dentro, 
+            isso deve ser feito somente por um técnico responsável. 
+            A limpeza deve ser realizada com um pano limpo molhado com detergente neutro ou álcool. </p>
+        </div>
+      </div>
 
-    <div class="dropdown" id="dispositivo-text">
-      <div class="arrow-up"></div>
-      <div class="text">
-        <h3>Dispositivo</h3>
-        <h4>O dispositivo é a parte operante, nele se faz as alterações de pressão e tempo necessárias para dar ao paciente a melhor terapia. 
-          A sua limpeza deve ser feita somente na parte externa, assim não se deve em hipótese alguma abrir o equipamento para limpar por dentro, 
-          isso deve ser feito somente por um técnico responsável. 
-          A limpeza deve ser realizada com um pano limpo molhado com detergente neutro ou álcool. </h4>
+      <a id="filtro-img"><img src="assets/images/aparelho-2.png" alt="Filtro"></a>
+      <div class="dropdown" id="filtro-text">
+        <div class="arrow-up"></div>
+        <div class="text">
+          <h1>Filtro bacteriológico</h1>
+          <p>O filtro bacteriológico deve ser conectado entre o tubo e o dispositivo. 
+            Sua função, é impedir que possíveis bactérias entrem em contato com o paciente. 
+            Esse filtro não pode ser lavado, mas deve ser trocado sempre que perceber que está obstruído ou pode fazer a troca uma vez por mês.</p>
+        </div>
       </div>
-    </div>
 
-    <div class="dropdown" id="filtro-text">
-      <div class="arrow-up"></div>
-      <div class="text">
-        <h3>Filtro bacteriológico</h3>
-        <h4>O filtro bacteriológico deve ser conectado entre o tubo e o dispositivo. 
-          Sua função, é impedir que possíveis bactérias entrem em contato com o paciente. 
-          Esse filtro não pode ser lavado, mas deve ser trocado sempre que perceber que está obstruído ou pode fazer a troca uma vez por mês.</h4>
+      <a id="tubo-img"><img src="assets/images/aparelho-3.png" alt="Tubos de circuito"></a>
+      <div class="dropdown" id="tubo-text">
+        <div class="arrow-up"></div>
+        <div class="text">
+          <h1>Tubo</h1>
+          <p>O filtro bacteriológico deve ser conectado entre o tubo e o dispositivo. 
+            Sua função, é impedir que possíveis bactérias entrem em contato com o paciente. 
+            Esse filtro não pode ser lavado, mas deve ser trocado sempre que perceber que está obstruído ou pode fazer a troca uma vez por mês.</p>
+        </div>
       </div>
-    </div>
 
-    <div class="dropdown" id="tubo-text">
-      <div class="arrow-up"></div>
-      <div class="text">
-        <h3>Tubo</h3>
-        <h4>O filtro bacteriológico deve ser conectado entre o tubo e o dispositivo. 
-          Sua função, é impedir que possíveis bactérias entrem em contato com o paciente. 
-          Esse filtro não pode ser lavado, mas deve ser trocado sempre que perceber que está obstruído ou pode fazer a troca uma vez por mês.</h4>
+      <a id="adaptador-img"><img src="assets/images/aparelho-4.png" alt="Adaptador"></a>
+      <div class="dropdown" id="adaptador-text">
+        <div class="arrow-up"></div>
+        <div class="text">
+          <h1>Filtro de ar</h1>
+          <p>O filtro é localizado na parte posterior do ventilador e 
+            tem como objetivo filtrar o ar que está indo para o paciente para retirar possíveis impureza. 
+            O filtro de ar é descartável e não deve ser lavado.</p>
+        </div>
       </div>
-    </div>
-
-    <div class="dropdown" id="adaptador-text">
-      <div class="arrow-up"></div>
-      <div class="text">
-        <h3>Filtro de ar</h3>
-        <h4>O filtro é localizado na parte posterior do ventilador e 
-          tem como objetivo filtrar o ar que está indo para o paciente para retirar possíveis impureza. 
-          O filtro de ar é descartável e não deve ser lavado.</h4>
-      </div>
-    </div>
-  
-    <div class="dropdown" id="mascara-text">
-      <div class="arrow-up"></div>
-      <div class="text">
-        <h3>Máscara Facial</h3>
-      </div>
-    </div>
-  
-  
+      <a id="mascara-img"><img src="assets/images/aparelho-5.png" alt="Máscara Facial"></a>
+      <div class="dropdown" id="mascara-text">
+        <div class="arrow-up"></div>
+        <div class="text">
+          <h1>Máscara Facial</h1>
+        </div>
+      </div>      
+    </div> 
   </div>
 
-  <footer>
+  <footer id="footer">
     @@include('./partials/footer.html')
   </footer>
 
