correcao do texto

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -48,9 +48,10 @@
         <div class="arrow-up"></div>
         <div class="text">
           <h1>Tubo</h1>
-          <p>O filtro bacteriológico deve ser conectado entre o tubo e o dispositivo. 
-            Sua função, é impedir que possíveis bactérias entrem em contato com o paciente. 
-            Esse filtro não pode ser lavado, mas deve ser trocado sempre que perceber que está obstruído ou pode fazer a troca uma vez por mês.</p>
+          <p>O tubo é por onde o paciente irá receber as pressões oferecidas pelo dispositivo. 
+            A sua higienização deve ser feita com água e algumas gotas de água sanitária, 
+            após a lavagem é importante secar até que não se tenha mais água no seu interior. 
+            É importante que ele seja trocado pelo menos uma vez por ano.</p>
         </div>
       </div>
 
